fix(server): keep the derived trust lists null-tolerant
unionWithDerived returned List.copyOf(...) whenever a tenant was
configured, and List.copyOf(...).contains(null) throws where the
Stream.toList() it replaced returns false. AuthService consults the
allow-list with the token's issuer, which is null for a subject token
with no 'iss' claim, so on an unauthenticated endpoint anyone could turn
a 401 into a NullPointerException and a bodyless 500. Deriving a value
must not change that property, so the union is returned as an
unmodifiable view of an ArrayList: still immutable, still null-tolerant.

Also adds isEntraIssuer, so the one place that knows what an Entra
issuer looks like is the one that derives it. It grants no trust of its
own; the allow-list check is still what admits an issuer.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>